# dean-amp-v2

./: .gitignore  CMakeLists.txt  build-windows.bat  build-windows.ps1
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: CabSim.cpp  CabSim.h  NoiseGate.h  PowerAmp.h  SpringReverb.h  ToneStack.h  TubeStage.cpp  TubeStage.h
source/ui/: AmpChassis.cpp  AmpChassis.h  DeanLookAndFeel.cpp  DeanLookAndFeel.h  LedButton.cpp  LedButton.h  LevelMeter.cpp  LevelMeter.h  RotaryKnob.cpp  RotaryKnob.h  SlideToggle.h  ToggleSwitch.cpp  ToggleSwitch.h
tools/: DiTestMain.cpp  ProbeMain.cpp  SnapshotMain.cpp  ToneTestMain.cpp
